@@ -66,10 +66,10 @@ import com.lowagie.text.pdf.fonts.FontsResourceAnchor;
 class Type1Font extends BaseFont
 {
     private static FontsResourceAnchor resourceAnchor;
-    
+
     /** The PFB file if the input was made with a <CODE>byte</CODE> array.
-     */    
-    protected byte pfb[];
+     */
+    private byte pfb[];
 /** The Postscript font name.
  */
     private String FontName;
@@ -134,23 +134,23 @@ class Type1Font extends BaseFont
 /** A variable.
  */
     private int StdVW = 80;
-    
+
 /** Represents the section CharMetrics in the AFM file. Each
  *  value of this array contains a <CODE>Object[4]</CODE> with an
  *  Integer, Integer, String and int[]. This is the code, width, name and char bbox.
  *  The key is the name of the char and also an Integer with the char number.
  */
-    private HashMap CharMetrics = new HashMap();
+    private final HashMap CharMetrics = new HashMap();
 /** Represents the section KernPairs in the AFM file. The key is
  *  the name of the first character and the value is a <CODE>Object[]</CODE>
  *  with 2 elements for each kern pair. Position 0 is the name of
  *  the second character and position 1 is the kerning distance. This is
  *  repeated for all the pairs.
  */
-    private HashMap KernPairs = new HashMap();
+    private final HashMap KernPairs = new HashMap();
 /** The file in use.
  */
-    private String fileName;
+    private final String fileName;
 /** <CODE>true</CODE> if this font is one of the 14 built in fonts.
  */
     private boolean builtinFont = false;
@@ -158,7 +158,7 @@ class Type1Font extends BaseFont
  *  They have to appear in the PFB file in this sequence.
  */
     private static final int PFB_TYPES[] = {1, 2, 1};
-    
+
     /** Creates a new Type1 font.
      * @param ttfAfm the AFM file if the input is made with a <CODE>byte</CODE> array
      * @param pfb the PFB file if the input is made with a <CODE>byte</CODE> array
@@ -169,36 +169,40 @@ class Type1Font extends BaseFont
      * @throws IOException the AFM file could not be read
      * @since	2.1.5
      */
-    Type1Font(String afmFile, String enc, boolean emb, byte ttfAfm[], byte pfb[], boolean forceRead)
+    Type1Font(final String afmFile, final String enc, final boolean emb, final byte ttfAfm[], final byte pfb[], final boolean forceRead)
     	throws DocumentException, IOException {
-        if (emb && ttfAfm != null && pfb == null)
-            throw new DocumentException("Two byte arrays are needed if the Type1 font is embedded.");
-        if (emb && ttfAfm != null)
-            this.pfb = pfb;
-        encoding = enc;
-        embedded = emb;
-        fileName = afmFile;
-        fontType = FONT_TYPE_T1;
+        if (emb && ttfAfm != null && pfb == null) {
+			throw new DocumentException("Two byte arrays are needed if the Type1 font is embedded.");
+		}
+        if (emb && ttfAfm != null) {
+			this.pfb = pfb;
+		}
+        this.encoding = enc;
+        this.embedded = emb;
+        this.fileName = afmFile;
+        this.fontType = FONT_TYPE_T1;
         RandomAccessFileOrArray rf = null;
         InputStream is = null;
         if (BuiltinFonts14.containsKey(afmFile)) {
-            embedded = false;
-            builtinFont = true;
+            this.embedded = false;
+            this.builtinFont = true;
             byte buf[] = new byte[1024];
             try {
-                if (resourceAnchor == null)
-                    resourceAnchor = new FontsResourceAnchor();
+                if (resourceAnchor == null) {
+					resourceAnchor = new FontsResourceAnchor();
+				}
                 is = getResourceStream(RESOURCE_PATH + afmFile + ".afm", resourceAnchor.getClass().getClassLoader());
                 if (is == null) {
-                    String msg = afmFile + " not found as resource. (The *.afm files must exist as resources in the package com.lowagie.text.pdf.fonts)";
+                    final String msg = afmFile + " not found as resource. (The *.afm files must exist as resources in the package com.lowagie.text.pdf.fonts)";
                     System.err.println(msg);
                     throw new DocumentException(msg);
                 }
-                ByteArrayOutputStream out = new ByteArrayOutputStream();
+                final ByteArrayOutputStream out = new ByteArrayOutputStream();
                 while (true) {
-                    int size = is.read(buf);
-                    if (size < 0)
-                        break;
+                    final int size = is.read(buf);
+                    if (size < 0) {
+						break;
+					}
                     out.write(buf, 0, size);
                 }
                 buf = out.toByteArray();
@@ -208,7 +212,7 @@ class Type1Font extends BaseFont
                     try {
                         is.close();
                     }
-                    catch (Exception e) {
+                    catch (final Exception e) {
                         // empty on purpose
                     }
                 }
@@ -222,7 +226,7 @@ class Type1Font extends BaseFont
                     try {
                         rf.close();
                     }
-                    catch (Exception e) {
+                    catch (final Exception e) {
                         // empty on purpose
                     }
                 }
@@ -230,10 +234,11 @@ class Type1Font extends BaseFont
         }
         else if (afmFile.toLowerCase().endsWith(".afm")) {
             try {
-                if (ttfAfm == null)
-                    rf = new RandomAccessFileOrArray(afmFile, forceRead, Document.plainRandomAccess);
-                else
-                    rf = new RandomAccessFileOrArray(ttfAfm);
+                if (ttfAfm == null) {
+					rf = new RandomAccessFileOrArray(afmFile, forceRead, Document.plainRandomAccess);
+				} else {
+					rf = new RandomAccessFileOrArray(ttfAfm);
+				}
                 process(rf);
             }
             finally {
@@ -241,7 +246,7 @@ class Type1Font extends BaseFont
                     try {
                         rf.close();
                     }
-                    catch (Exception e) {
+                    catch (final Exception e) {
                         // empty on purpose
                     }
                 }
@@ -249,11 +254,12 @@ class Type1Font extends BaseFont
         }
         else if (afmFile.toLowerCase().endsWith(".pfm")) {
             try {
-                ByteArrayOutputStream ba = new ByteArrayOutputStream();
-                if (ttfAfm == null)
-                    rf = new RandomAccessFileOrArray(afmFile, forceRead, Document.plainRandomAccess);
-                else
-                    rf = new RandomAccessFileOrArray(ttfAfm);
+                final ByteArrayOutputStream ba = new ByteArrayOutputStream();
+                if (ttfAfm == null) {
+					rf = new RandomAccessFileOrArray(afmFile, forceRead, Document.plainRandomAccess);
+				} else {
+					rf = new RandomAccessFileOrArray(ttfAfm);
+				}
                 Pfm2afm.convert(rf, ba);
                 rf.close();
                 rf = new RandomAccessFileOrArray(ba.toByteArray());
@@ -264,24 +270,26 @@ class Type1Font extends BaseFont
                     try {
                         rf.close();
                     }
-                    catch (Exception e) {
+                    catch (final Exception e) {
                         // empty on purpose
                     }
                 }
             }
-        }
-        else
-            throw new DocumentException(afmFile + " is not an AFM or PFM font file.");
+        } else {
+			throw new DocumentException(afmFile + " is not an AFM or PFM font file.");
+		}
 
-        EncodingScheme = EncodingScheme.trim();
-        if (EncodingScheme.equals("AdobeStandardEncoding") || EncodingScheme.equals("StandardEncoding")) {
-            fontSpecific = false;
+        this.EncodingScheme = this.EncodingScheme.trim();
+        if (this.EncodingScheme.equals("AdobeStandardEncoding") || this.EncodingScheme.equals("StandardEncoding")) {
+            this.fontSpecific = false;
         }
-        if (!encoding.startsWith("#"))
-            PdfEncodings.convertToBytes(" ", enc); // check if the encoding exists
+        if (!this.encoding.startsWith("#"))
+		 {
+			PdfEncodings.convertToBytes(" ", enc); // check if the encoding exists
+		}
         createEncoding();
     }
-    
+
 /** Gets the width from the font according to the <CODE>name</CODE> or,
  * if the <CODE>name</CODE> is null, meaning it is a symbolic font,
  * the char <CODE>c</CODE>.
@@ -289,21 +297,24 @@ class Type1Font extends BaseFont
  * @param name the glyph name
  * @return the width of the char
  */
-    int getRawWidth(int c, String name) {
+    @Override
+	int getRawWidth(final int c, final String name) {
         Object metrics[];
         if (name == null) { // font specific
-            metrics = (Object[])CharMetrics.get(new Integer(c));
+            metrics = (Object[])this.CharMetrics.get(new Integer(c));
         }
         else {
-            if (name.equals(".notdef"))
-                return 0;
-            metrics = (Object[])CharMetrics.get(name);
+            if (name.equals(".notdef")) {
+				return 0;
+			}
+            metrics = (Object[])this.CharMetrics.get(name);
         }
-        if (metrics != null)
-            return ((Integer)(metrics[1])).intValue();
+        if (metrics != null) {
+			return ((Integer)metrics[1]).intValue();
+		}
         return 0;
     }
-    
+
 /** Gets the kerning between two Unicode characters. The characters
  * are converted to names and this names are used to find the kerning
  * pairs in the <CODE>HashMap</CODE> <CODE>KernPairs</CODE>.
@@ -311,92 +322,100 @@ class Type1Font extends BaseFont
  * @param char2 the second char
  * @return the kerning to be applied
  */
-    public int getKerning(int char1, int char2)
+    @Override
+	public int getKerning(final int char1, final int char2)
     {
-        String first = GlyphList.unicodeToName(char1);
-        if (first == null)
-            return 0;
-        String second = GlyphList.unicodeToName(char2);
-        if (second == null)
-            return 0;
-        Object obj[] = (Object[])KernPairs.get(first);
-        if (obj == null)
-            return 0;
+        final String first = GlyphList.unicodeToName(char1);
+        if (first == null) {
+			return 0;
+		}
+        final String second = GlyphList.unicodeToName(char2);
+        if (second == null) {
+			return 0;
+		}
+        final Object obj[] = (Object[])this.KernPairs.get(first);
+        if (obj == null) {
+			return 0;
+		}
         for (int k = 0; k < obj.length; k += 2) {
-            if (second.equals(obj[k]))
-                return ((Integer)obj[k + 1]).intValue();
+            if (second.equals(obj[k])) {
+				return ((Integer)obj[k + 1]).intValue();
+			}
         }
         return 0;
     }
-    
-    
+
+
     /** Reads the font metrics
      * @param rf the AFM file
      * @throws DocumentException the AFM file is invalid
      * @throws IOException the AFM file could not be read
      */
-    public void process(RandomAccessFileOrArray rf) throws DocumentException, IOException
+    private void process(final RandomAccessFileOrArray rf) throws DocumentException, IOException
     {
         String line;
         boolean isMetrics = false;
         while ((line = rf.readLine()) != null)
         {
-            StringTokenizer tok = new StringTokenizer(line, " ,\n\r\t\f");
-            if (!tok.hasMoreTokens())
-                continue;
-            String ident = tok.nextToken();
-            if (ident.equals("FontName"))
-                FontName = tok.nextToken("\u00ff").substring(1);
-            else if (ident.equals("FullName"))
-                FullName = tok.nextToken("\u00ff").substring(1);
-            else if (ident.equals("FamilyName"))
-                FamilyName = tok.nextToken("\u00ff").substring(1);
-            else if (ident.equals("Weight"))
-                Weight = tok.nextToken("\u00ff").substring(1);
-            else if (ident.equals("ItalicAngle"))
-                ItalicAngle = Float.parseFloat(tok.nextToken());
-            else if (ident.equals("IsFixedPitch"))
-                IsFixedPitch = tok.nextToken().equals("true");
-            else if (ident.equals("CharacterSet"))
-                CharacterSet = tok.nextToken("\u00ff").substring(1);
-            else if (ident.equals("FontBBox"))
+            final StringTokenizer tok = new StringTokenizer(line, " ,\n\r\t\f");
+            if (!tok.hasMoreTokens()) {
+				continue;
+			}
+            final String ident = tok.nextToken();
+            if (ident.equals("FontName")) {
+				this.FontName = tok.nextToken("\u00ff").substring(1);
+			} else if (ident.equals("FullName")) {
+				this.FullName = tok.nextToken("\u00ff").substring(1);
+			} else if (ident.equals("FamilyName")) {
+				this.FamilyName = tok.nextToken("\u00ff").substring(1);
+			} else if (ident.equals("Weight")) {
+				this.Weight = tok.nextToken("\u00ff").substring(1);
+			} else if (ident.equals("ItalicAngle")) {
+				this.ItalicAngle = Float.parseFloat(tok.nextToken());
+			} else if (ident.equals("IsFixedPitch")) {
+				this.IsFixedPitch = tok.nextToken().equals("true");
+			} else if (ident.equals("CharacterSet")) {
+				this.CharacterSet = tok.nextToken("\u00ff").substring(1);
+			} else if (ident.equals("FontBBox"))
             {
-                llx = (int)Float.parseFloat(tok.nextToken());
-                lly = (int)Float.parseFloat(tok.nextToken());
-                urx = (int)Float.parseFloat(tok.nextToken());
-                ury = (int)Float.parseFloat(tok.nextToken());
+                this.llx = (int)Float.parseFloat(tok.nextToken());
+                this.lly = (int)Float.parseFloat(tok.nextToken());
+                this.urx = (int)Float.parseFloat(tok.nextToken());
+                this.ury = (int)Float.parseFloat(tok.nextToken());
             }
-            else if (ident.equals("UnderlinePosition"))
-                UnderlinePosition = (int)Float.parseFloat(tok.nextToken());
-            else if (ident.equals("UnderlineThickness"))
-                UnderlineThickness = (int)Float.parseFloat(tok.nextToken());
-            else if (ident.equals("EncodingScheme"))
-                EncodingScheme = tok.nextToken("\u00ff").substring(1);
-            else if (ident.equals("CapHeight"))
-                CapHeight = (int)Float.parseFloat(tok.nextToken());
-            else if (ident.equals("XHeight"))
-                XHeight = (int)Float.parseFloat(tok.nextToken());
-            else if (ident.equals("Ascender"))
-                Ascender = (int)Float.parseFloat(tok.nextToken());
-            else if (ident.equals("Descender"))
-                Descender = (int)Float.parseFloat(tok.nextToken());
-            else if (ident.equals("StdHW"))
-                StdHW = (int)Float.parseFloat(tok.nextToken());
-            else if (ident.equals("StdVW"))
-                StdVW = (int)Float.parseFloat(tok.nextToken());
-            else if (ident.equals("StartCharMetrics"))
+            else if (ident.equals("UnderlinePosition")) {
+				this.UnderlinePosition = (int)Float.parseFloat(tok.nextToken());
+			} else if (ident.equals("UnderlineThickness")) {
+				this.UnderlineThickness = (int)Float.parseFloat(tok.nextToken());
+			} else if (ident.equals("EncodingScheme")) {
+				this.EncodingScheme = tok.nextToken("\u00ff").substring(1);
+			} else if (ident.equals("CapHeight")) {
+				this.CapHeight = (int)Float.parseFloat(tok.nextToken());
+			} else if (ident.equals("XHeight")) {
+				this.XHeight = (int)Float.parseFloat(tok.nextToken());
+			} else if (ident.equals("Ascender")) {
+				this.Ascender = (int)Float.parseFloat(tok.nextToken());
+			} else if (ident.equals("Descender")) {
+				this.Descender = (int)Float.parseFloat(tok.nextToken());
+			} else if (ident.equals("StdHW")) {
+				this.StdHW = (int)Float.parseFloat(tok.nextToken());
+			} else if (ident.equals("StdVW")) {
+				this.StdVW = (int)Float.parseFloat(tok.nextToken());
+			} else if (ident.equals("StartCharMetrics"))
             {
                 isMetrics = true;
                 break;
             }
         }
-        if (!isMetrics)
-            throw new DocumentException("Missing StartCharMetrics in " + fileName);
+        if (!isMetrics) {
+			throw new DocumentException("Missing StartCharMetrics in " + this.fileName);
+		}
         while ((line = rf.readLine()) != null)
         {
             StringTokenizer tok = new StringTokenizer(line);
-            if (!tok.hasMoreTokens())
-                continue;
+            if (!tok.hasMoreTokens()) {
+				continue;
+			}
             String ident = tok.nextToken();
             if (ident.equals("EndCharMetrics"))
             {
@@ -411,73 +430,81 @@ class Type1Font extends BaseFont
             tok = new StringTokenizer(line, ";");
             while (tok.hasMoreTokens())
             {
-                StringTokenizer tokc = new StringTokenizer(tok.nextToken());
-                if (!tokc.hasMoreTokens())
-                    continue;
+                final StringTokenizer tokc = new StringTokenizer(tok.nextToken());
+                if (!tokc.hasMoreTokens()) {
+					continue;
+				}
                 ident = tokc.nextToken();
-                if (ident.equals("C"))
-                    C = Integer.valueOf(tokc.nextToken());
-                else if (ident.equals("WX"))
-                    WX = new Integer((int)Float.parseFloat(tokc.nextToken()));
-                else if (ident.equals("N"))
-                    N = tokc.nextToken();
-                else if (ident.equals("B")) {
-                    B = new int[]{Integer.parseInt(tokc.nextToken()), 
+                if (ident.equals("C")) {
+					C = Integer.valueOf(tokc.nextToken());
+				} else if (ident.equals("WX")) {
+					WX = new Integer((int)Float.parseFloat(tokc.nextToken()));
+				} else if (ident.equals("N")) {
+					N = tokc.nextToken();
+				} else if (ident.equals("B")) {
+                    B = new int[]{Integer.parseInt(tokc.nextToken()),
                                          Integer.parseInt(tokc.nextToken()),
                                          Integer.parseInt(tokc.nextToken()),
                                          Integer.parseInt(tokc.nextToken())};
                 }
             }
-            Object metrics[] = new Object[]{C, WX, N, B};
-            if (C.intValue() >= 0)
-                CharMetrics.put(C, metrics);
-            CharMetrics.put(N, metrics);
+            final Object metrics[] = new Object[]{C, WX, N, B};
+            if (C.intValue() >= 0) {
+				this.CharMetrics.put(C, metrics);
+			}
+            this.CharMetrics.put(N, metrics);
         }
-        if (isMetrics)
-            throw new DocumentException("Missing EndCharMetrics in " + fileName);
-        if (!CharMetrics.containsKey("nonbreakingspace")) {
-            Object[] space = (Object[])CharMetrics.get("space");
-            if (space != null)
-                CharMetrics.put("nonbreakingspace", space);
+        if (isMetrics) {
+			throw new DocumentException("Missing EndCharMetrics in " + this.fileName);
+		}
+        if (!this.CharMetrics.containsKey("nonbreakingspace")) {
+            final Object[] space = (Object[])this.CharMetrics.get("space");
+            if (space != null) {
+				this.CharMetrics.put("nonbreakingspace", space);
+			}
         }
         while ((line = rf.readLine()) != null)
         {
-            StringTokenizer tok = new StringTokenizer(line);
-            if (!tok.hasMoreTokens())
-                continue;
-            String ident = tok.nextToken();
-            if (ident.equals("EndFontMetrics"))
-                return;
+            final StringTokenizer tok = new StringTokenizer(line);
+            if (!tok.hasMoreTokens()) {
+				continue;
+			}
+            final String ident = tok.nextToken();
+            if (ident.equals("EndFontMetrics")) {
+				return;
+			}
             if (ident.equals("StartKernPairs"))
             {
                 isMetrics = true;
                 break;
             }
         }
-        if (!isMetrics)
-            throw new DocumentException("Missing EndFontMetrics in " + fileName);
+        if (!isMetrics) {
+			throw new DocumentException("Missing EndFontMetrics in " + this.fileName);
+		}
         while ((line = rf.readLine()) != null)
         {
-            StringTokenizer tok = new StringTokenizer(line);
-            if (!tok.hasMoreTokens())
-                continue;
-            String ident = tok.nextToken();
+            final StringTokenizer tok = new StringTokenizer(line);
+            if (!tok.hasMoreTokens()) {
+				continue;
+			}
+            final String ident = tok.nextToken();
             if (ident.equals("KPX"))
             {
-                String first = tok.nextToken();
-                String second = tok.nextToken();
-                Integer width = new Integer((int)Float.parseFloat(tok.nextToken()));
-                Object relates[] = (Object[])KernPairs.get(first);
-                if (relates == null)
-                    KernPairs.put(first, new Object[]{second, width});
-                else
+                final String first = tok.nextToken();
+                final String second = tok.nextToken();
+                final Integer width = new Integer((int)Float.parseFloat(tok.nextToken()));
+                final Object relates[] = (Object[])this.KernPairs.get(first);
+                if (relates == null) {
+					this.KernPairs.put(first, new Object[]{second, width});
+				} else
                 {
-                    int n = relates.length;
-                    Object relates2[] = new Object[n + 2];
+                    final int n = relates.length;
+                    final Object relates2[] = new Object[n + 2];
                     System.arraycopy(relates, 0, relates2, 0, n);
                     relates2[n] = second;
                     relates2[n + 1] = width;
-                    KernPairs.put(first, relates2);
+                    this.KernPairs.put(first, relates2);
                 }
             }
             else if (ident.equals("EndKernPairs"))
@@ -486,11 +513,12 @@ class Type1Font extends BaseFont
                 break;
             }
         }
-        if (isMetrics)
-            throw new DocumentException("Missing EndKernPairs in " + fileName);
+        if (isMetrics) {
+			throw new DocumentException("Missing EndKernPairs in " + this.fileName);
+		}
         rf.close();
     }
-    
+
 /** If the embedded flag is <CODE>false</CODE> or if the font is
  *  one of the 14 built in types, it returns <CODE>null</CODE>,
  * otherwise the font is read and output in a PdfStream object.
@@ -498,42 +526,48 @@ class Type1Font extends BaseFont
  * @throws DocumentException if there is an error reading the font
  * @since 2.1.3
  */
-    public PdfStream getFullFontStream() throws DocumentException
+    @Override
+	public PdfStream getFullFontStream() throws DocumentException
     {
-        if (builtinFont || !embedded)
-            return null;
+        if (this.builtinFont || !this.embedded) {
+			return null;
+		}
         RandomAccessFileOrArray rf = null;
         try {
-            String filePfb = fileName.substring(0, fileName.length() - 3) + "pfb";
-            if (pfb == null)
-                rf = new RandomAccessFileOrArray(filePfb, true, Document.plainRandomAccess);
-            else
-                rf = new RandomAccessFileOrArray(pfb);
-            int fileLength = rf.length();
-            byte st[] = new byte[fileLength - 18];
-            int lengths[] = new int[3];
+            final String filePfb = this.fileName.substring(0, this.fileName.length() - 3) + "pfb";
+            if (this.pfb == null) {
+				rf = new RandomAccessFileOrArray(filePfb, true, Document.plainRandomAccess);
+			} else {
+				rf = new RandomAccessFileOrArray(this.pfb);
+			}
+            final int fileLength = rf.length();
+            final byte st[] = new byte[fileLength - 18];
+            final int lengths[] = new int[3];
             int bytePtr = 0;
             for (int k = 0; k < 3; ++k) {
-                if (rf.read() != 0x80)
-                    throw new DocumentException("Start marker missing in " + filePfb);
-                if (rf.read() != PFB_TYPES[k])
-                    throw new DocumentException("Incorrect segment type in " + filePfb);
+                if (rf.read() != 0x80) {
+					throw new DocumentException("Start marker missing in " + filePfb);
+				}
+                if (rf.read() != PFB_TYPES[k]) {
+					throw new DocumentException("Incorrect segment type in " + filePfb);
+				}
                 int size = rf.read();
                 size += rf.read() << 8;
                 size += rf.read() << 16;
                 size += rf.read() << 24;
                 lengths[k] = size;
                 while (size != 0) {
-                    int got = rf.read(st, bytePtr, size);
-                    if (got < 0)
-                        throw new DocumentException("Premature end in " + filePfb);
+                    final int got = rf.read(st, bytePtr, size);
+                    if (got < 0) {
+						throw new DocumentException("Premature end in " + filePfb);
+					}
                     bytePtr += got;
                     size -= got;
                 }
             }
-            return new StreamFont(st, lengths, compressionLevel);
+            return new StreamFont(st, lengths, this.compressionLevel);
         }
-        catch (Exception e) {
+        catch (final Exception e) {
             throw new DocumentException(e);
         }
         finally {
@@ -541,47 +575,53 @@ class Type1Font extends BaseFont
                 try {
                     rf.close();
                 }
-                catch (Exception e) {
+                catch (final Exception e) {
                     // empty on purpose
                 }
             }
         }
     }
-    
+
 /** Generates the font descriptor for this font or <CODE>null</CODE> if it is
  * one of the 14 built in fonts.
  * @param fontStream the indirect reference to a PdfStream containing the font or <CODE>null</CODE>
  * @return the PdfDictionary containing the font descriptor or <CODE>null</CODE>
  */
-    private PdfDictionary getFontDescriptor(PdfIndirectReference fontStream)
+    private PdfDictionary getFontDescriptor(final PdfIndirectReference fontStream)
     {
-        if (builtinFont)
-            return null;
-        PdfDictionary dic = new PdfDictionary(PdfName.FONTDESCRIPTOR);
-        dic.put(PdfName.ASCENT, new PdfNumber(Ascender));
-        dic.put(PdfName.CAPHEIGHT, new PdfNumber(CapHeight));
-        dic.put(PdfName.DESCENT, new PdfNumber(Descender));
-        dic.put(PdfName.FONTBBOX, new PdfRectangle(llx, lly, urx, ury));
-        dic.put(PdfName.FONTNAME, new PdfName(FontName));
-        dic.put(PdfName.ITALICANGLE, new PdfNumber(ItalicAngle));
-        dic.put(PdfName.STEMV, new PdfNumber(StdVW));
-        if (fontStream != null)
-            dic.put(PdfName.FONTFILE, fontStream);
+        if (this.builtinFont) {
+			return null;
+		}
+        final PdfDictionary dic = new PdfDictionary(PdfName.FONTDESCRIPTOR);
+        dic.put(PdfName.ASCENT, new PdfNumber(this.Ascender));
+        dic.put(PdfName.CAPHEIGHT, new PdfNumber(this.CapHeight));
+        dic.put(PdfName.DESCENT, new PdfNumber(this.Descender));
+        dic.put(PdfName.FONTBBOX, new PdfRectangle(this.llx, this.lly, this.urx, this.ury));
+        dic.put(PdfName.FONTNAME, new PdfName(this.FontName));
+        dic.put(PdfName.ITALICANGLE, new PdfNumber(this.ItalicAngle));
+        dic.put(PdfName.STEMV, new PdfNumber(this.StdVW));
+        if (fontStream != null) {
+			dic.put(PdfName.FONTFILE, fontStream);
+		}
         int flags = 0;
-        if (IsFixedPitch)
-            flags |= 1;
-        flags |= fontSpecific ? 4 : 32;
-        if (ItalicAngle < 0)
-            flags |= 64;
-        if (FontName.indexOf("Caps") >= 0 || FontName.endsWith("SC"))
-            flags |= 131072;
-        if (Weight.equals("Bold"))
-            flags |= 262144;
+        if (this.IsFixedPitch) {
+			flags |= 1;
+		}
+        flags |= this.fontSpecific ? 4 : 32;
+        if (this.ItalicAngle < 0) {
+			flags |= 64;
+		}
+        if (this.FontName.indexOf("Caps") >= 0 || this.FontName.endsWith("SC")) {
+			flags |= 131072;
+		}
+        if (this.Weight.equals("Bold")) {
+			flags |= 262144;
+		}
         dic.put(PdfName.FLAGS, new PdfNumber(flags));
-        
+
         return dic;
     }
-    
+
     /** Generates the font dictionary for this font.
      * @return the PdfDictionary containing the font dictionary
      * @param firstChar the first valid character
@@ -589,57 +629,59 @@ class Type1Font extends BaseFont
      * @param shortTag a 256 bytes long <CODE>byte</CODE> array where each unused byte is represented by 0
      * @param fontDescriptor the indirect reference to a PdfDictionary containing the font descriptor or <CODE>null</CODE>
      */
-    private PdfDictionary getFontBaseType(PdfIndirectReference fontDescriptor, int firstChar, int lastChar, byte shortTag[])
+    private PdfDictionary getFontBaseType(final PdfIndirectReference fontDescriptor, int firstChar, final int lastChar, final byte shortTag[])
     {
-        PdfDictionary dic = new PdfDictionary(PdfName.FONT);
+        final PdfDictionary dic = new PdfDictionary(PdfName.FONT);
         dic.put(PdfName.SUBTYPE, PdfName.TYPE1);
-        dic.put(PdfName.BASEFONT, new PdfName(FontName));
-        boolean stdEncoding = encoding.equals("Cp1252") || encoding.equals("MacRoman");
-        if (!fontSpecific || specialMap != null) {
+        dic.put(PdfName.BASEFONT, new PdfName(this.FontName));
+        final boolean stdEncoding = this.encoding.equals("Cp1252") || this.encoding.equals("MacRoman");
+        if (!this.fontSpecific || this.specialMap != null) {
             for (int k = firstChar; k <= lastChar; ++k) {
-                if (!differences[k].equals(notdef)) {
+                if (!this.differences[k].equals(notdef)) {
                     firstChar = k;
                     break;
                 }
             }
-            if (stdEncoding)
-                dic.put(PdfName.ENCODING, encoding.equals("Cp1252") ? PdfName.WIN_ANSI_ENCODING : PdfName.MAC_ROMAN_ENCODING);
-            else {
-                PdfDictionary enc = new PdfDictionary(PdfName.ENCODING);
-                PdfArray dif = new PdfArray();
-                boolean gap = true;                
+            if (stdEncoding) {
+				dic.put(PdfName.ENCODING, this.encoding.equals("Cp1252") ? PdfName.WIN_ANSI_ENCODING : PdfName.MAC_ROMAN_ENCODING);
+			} else {
+                final PdfDictionary enc = new PdfDictionary(PdfName.ENCODING);
+                final PdfArray dif = new PdfArray();
+                boolean gap = true;
                 for (int k = firstChar; k <= lastChar; ++k) {
                     if (shortTag[k] != 0) {
                         if (gap) {
                             dif.add(new PdfNumber(k));
                             gap = false;
                         }
-                        dif.add(new PdfName(differences[k]));
-                    }
-                    else
-                        gap = true;
+                        dif.add(new PdfName(this.differences[k]));
+                    } else {
+						gap = true;
+					}
                 }
                 enc.put(PdfName.DIFFERENCES, dif);
                 dic.put(PdfName.ENCODING, enc);
             }
         }
-        if (specialMap != null || forceWidthsOutput || !(builtinFont && (fontSpecific || stdEncoding))) {
+        if (this.specialMap != null || this.forceWidthsOutput || !(this.builtinFont && (this.fontSpecific || stdEncoding))) {
             dic.put(PdfName.FIRSTCHAR, new PdfNumber(firstChar));
             dic.put(PdfName.LASTCHAR, new PdfNumber(lastChar));
-            PdfArray wd = new PdfArray();
+            final PdfArray wd = new PdfArray();
             for (int k = firstChar; k <= lastChar; ++k) {
-                if (shortTag[k] == 0)
-                    wd.add(new PdfNumber(0));
-                else
-                    wd.add(new PdfNumber(widths[k]));
+                if (shortTag[k] == 0) {
+					wd.add(new PdfNumber(0));
+				} else {
+					wd.add(new PdfNumber(this.widths[k]));
+				}
             }
             dic.put(PdfName.WIDTHS, wd);
         }
-        if (!builtinFont && fontDescriptor != null)
-            dic.put(PdfName.FONTDESCRIPTOR, fontDescriptor);
+        if (!this.builtinFont && fontDescriptor != null) {
+			dic.put(PdfName.FONTDESCRIPTOR, fontDescriptor);
+		}
         return dic;
     }
-    
+
     /** Outputs to the writer the font dictionaries and streams.
      * @param writer the writer for this document
      * @param ref the font indirect reference
@@ -647,16 +689,18 @@ class Type1Font extends BaseFont
      * @throws IOException on error
      * @throws DocumentException error in generating the object
      */
-    void writeFont(PdfWriter writer, PdfIndirectReference ref, Object params[]) throws DocumentException, IOException {
+    @Override
+	void writeFont(final PdfWriter writer, final PdfIndirectReference ref, final Object params[]) throws DocumentException, IOException {
         int firstChar = ((Integer)params[0]).intValue();
         int lastChar = ((Integer)params[1]).intValue();
-        byte shortTag[] = (byte[])params[2];
-        boolean subsetp = ((Boolean)params[3]).booleanValue() && subset;
+        final byte shortTag[] = (byte[])params[2];
+        final boolean subsetp = ((Boolean)params[3]).booleanValue() && this.subset;
         if (!subsetp) {
             firstChar = 0;
             lastChar = shortTag.length - 1;
-            for (int k = 0; k < shortTag.length; ++k)
-                shortTag[k] = 1;
+            for (int k = 0; k < shortTag.length; ++k) {
+				shortTag[k] = 1;
+			}
         }
         PdfIndirectReference ind_font = null;
         PdfObject pobj = null;
@@ -674,7 +718,7 @@ class Type1Font extends BaseFont
         pobj = getFontBaseType(ind_font, firstChar, lastChar, shortTag);
         writer.addToBody(pobj, ref);
     }
-    
+
     /** Gets the font parameter identified by <CODE>key</CODE>. Valid values
      * for <CODE>key</CODE> are <CODE>ASCENT</CODE>, <CODE>CAPHEIGHT</CODE>, <CODE>DESCENT</CODE>,
      * <CODE>ITALICANGLE</CODE>, <CODE>BBOXLLX</CODE>, <CODE>BBOXLLY</CODE>, <CODE>BBOXURX</CODE>
@@ -682,46 +726,48 @@ class Type1Font extends BaseFont
      * @param key the parameter to be extracted
      * @param fontSize the font size in points
      * @return the parameter in points
-     */    
-    public float getFontDescriptor(int key, float fontSize) {
+     */
+    @Override
+	public float getFontDescriptor(final int key, final float fontSize) {
         switch (key) {
             case AWT_ASCENT:
             case ASCENT:
-                return Ascender * fontSize / 1000;
+                return this.Ascender * fontSize / 1000;
             case CAPHEIGHT:
-                return CapHeight * fontSize / 1000;
+                return this.CapHeight * fontSize / 1000;
             case AWT_DESCENT:
             case DESCENT:
-                return Descender * fontSize / 1000;
+                return this.Descender * fontSize / 1000;
             case ITALICANGLE:
-                return ItalicAngle;
+                return this.ItalicAngle;
             case BBOXLLX:
-                return llx * fontSize / 1000;
+                return this.llx * fontSize / 1000;
             case BBOXLLY:
-                return lly * fontSize / 1000;
+                return this.lly * fontSize / 1000;
             case BBOXURX:
-                return urx * fontSize / 1000;
+                return this.urx * fontSize / 1000;
             case BBOXURY:
-                return ury * fontSize / 1000;
+                return this.ury * fontSize / 1000;
             case AWT_LEADING:
                 return 0;
             case AWT_MAXADVANCE:
-                return (urx - llx) * fontSize / 1000;
+                return (this.urx - this.llx) * fontSize / 1000;
             case UNDERLINE_POSITION:
-                return UnderlinePosition * fontSize / 1000;
+                return this.UnderlinePosition * fontSize / 1000;
             case UNDERLINE_THICKNESS:
-                return UnderlineThickness * fontSize / 1000;
+                return this.UnderlineThickness * fontSize / 1000;
         }
         return 0;
     }
-    
+
     /** Gets the postscript font name.
      * @return the postscript font name
      */
-    public String getPostscriptFontName() {
-        return FontName;
+    @Override
+	public String getPostscriptFontName() {
+        return this.FontName;
     }
-    
+
     /** Gets the full name of the font. If it is a True Type font
      * each array element will have {Platform ID, Platform Encoding ID,
      * Language ID, font name}. The interpretation of this values can be
@@ -730,10 +776,11 @@ class Type1Font extends BaseFont
      * font name}.
      * @return the full name of the font
      */
-    public String[][] getFullFontName() {
-        return new String[][]{{"", "", "", FullName}};
+    @Override
+	public String[][] getFullFontName() {
+        return new String[][]{{"", "", "", this.FullName}};
     }
-    
+
     /** Gets all the entries of the names-table. If it is a True Type font
      * each array element will have {Name ID, Platform ID, Platform Encoding ID,
      * Language ID, font name}. The interpretation of this values can be
@@ -742,10 +789,11 @@ class Type1Font extends BaseFont
      * font name}.
      * @return the full name of the font
      */
-    public String[][] getAllNameEntries() {
-        return new String[][]{{"4", "", "", "", FullName}};
+    @Override
+	public String[][] getAllNameEntries() {
+        return new String[][]{{"4", "", "", "", this.FullName}};
     }
-    
+
     /** Gets the family name of the font. If it is a True Type font
      * each array element will have {Platform ID, Platform Encoding ID,
      * Language ID, font name}. The interpretation of this values can be
@@ -754,26 +802,29 @@ class Type1Font extends BaseFont
      * font name}.
      * @return the family name of the font
      */
-    public String[][] getFamilyFontName() {
-        return new String[][]{{"", "", "", FamilyName}};
+    @Override
+	public String[][] getFamilyFontName() {
+        return new String[][]{{"", "", "", this.FamilyName}};
     }
-    
+
     /** Checks if the font has any kerning pairs.
      * @return <CODE>true</CODE> if the font has any kerning pairs
-     */    
-    public boolean hasKernPairs() {
-        return !KernPairs.isEmpty();
+     */
+    @Override
+	public boolean hasKernPairs() {
+        return !this.KernPairs.isEmpty();
     }
-    
+
     /**
      * Sets the font name that will appear in the pdf font dictionary.
      * Use with care as it can easily make a font unreadable if not embedded.
      * @param name the new font name
-     */    
-    public void setPostscriptFontName(String name) {
-        FontName = name;
+     */
+    @Override
+	public void setPostscriptFontName(final String name) {
+        this.FontName = name;
     }
-    
+
     /**
      * Sets the kerning between two Unicode chars.
      * @param char1 the first char
@@ -781,17 +832,20 @@ class Type1Font extends BaseFont
      * @param kern the kerning to apply in normalized 1000 units
      * @return <code>true</code> if the kerning was applied, <code>false</code> otherwise
      */
-    public boolean setKerning(int char1, int char2, int kern) {
-        String first = GlyphList.unicodeToName(char1);
-        if (first == null)
-            return false;
-        String second = GlyphList.unicodeToName(char2);
-        if (second == null)
-            return false;
-        Object obj[] = (Object[])KernPairs.get(first);
+    @Override
+	public boolean setKerning(final int char1, final int char2, final int kern) {
+        final String first = GlyphList.unicodeToName(char1);
+        if (first == null) {
+			return false;
+		}
+        final String second = GlyphList.unicodeToName(char2);
+        if (second == null) {
+			return false;
+		}
+        Object obj[] = (Object[])this.KernPairs.get(first);
         if (obj == null) {
             obj = new Object[]{second, new Integer(kern)};
-            KernPairs.put(first, obj);
+            this.KernPairs.put(first, obj);
             return true;
         }
         for (int k = 0; k < obj.length; k += 2) {
@@ -800,28 +854,31 @@ class Type1Font extends BaseFont
                 return true;
             }
         }
-        int size = obj.length;
-        Object obj2[] = new Object[size + 2];
+        final int size = obj.length;
+        final Object obj2[] = new Object[size + 2];
         System.arraycopy(obj, 0, obj2, 0, size);
         obj2[size] = second;
         obj2[size + 1] = new Integer(kern);
-        KernPairs.put(first, obj2);
+        this.KernPairs.put(first, obj2);
         return true;
     }
-    
-    protected int[] getRawCharBBox(int c, String name) {
+
+    @Override
+	protected int[] getRawCharBBox(final int c, final String name) {
         Object metrics[];
         if (name == null) { // font specific
-            metrics = (Object[])CharMetrics.get(new Integer(c));
+            metrics = (Object[])this.CharMetrics.get(new Integer(c));
         }
         else {
-            if (name.equals(".notdef"))
-                return null;
-            metrics = (Object[])CharMetrics.get(name);
+            if (name.equals(".notdef")) {
+				return null;
+			}
+            metrics = (Object[])this.CharMetrics.get(name);
         }
-        if (metrics != null)
-            return ((int[])(metrics[3]));
+        if (metrics != null) {
+			return (int[])metrics[3];
+		}
         return null;
     }
-    
+
 }
